# Python-Script

./: .gitattributes  .gitignore  CMakeLists.txt  README_WINDOWS.md  aoa_h264server.c  aoa_start.c  aoa_start.h  aoa_start_tool.c  rk_aoa_bridge.c  rk_bridge_config.sh  run_windows.ps1  start_multi_rk_bridge.sh  start_multi_windows.ps1  start_windows.ps1  stop_multi_rk_bridge.sh  stop_multi_windows.ps1  test_phone_touch.ps1  test_zuoboa.py  win_video_server.py  启动  启动流程  计算伴随矩阵.py  计算矩阵的伴随矩阵.py
